# ai-implementation

./: README.md  main.py  pyproject.toml
RAG/: simple_rag_demo.py
agents/: agent_demo.py
chain/: chain.py  sequential_chain.py
chathistory/: chat_history.py  chat_prompt_template.py
embeddings/: embeddings_demo.py
imageprocessing/: images_demo.py
prompt_template/: prompt_template.py
vector_store/: simple_vector_demo.py  support_doc.txt
